# DungeonBreak-docs

./: .gitignore  .gitmodules  AGENTS.md  RALPH_TASK.example.md  README.md  package-lock.json  package.json  planning  planning.cmd  pnpm-lock.yaml  pyproject.toml
.claude/: escape-the-dungeon-simulation.md
.concept/: CONTENT-BACKLOG.md  DISCOVERY-LOG.md  PROCESS.md  RUNTIME-REFERENCE.md  SIMULATION-AGENT-GUIDE.md
.planning/: CONTENT-PACK-VERSIONING.md  DECISIONS.md  DECISIONS.xml  ERRORS-AND-ATTEMPTS.xml  ERRORS.md  GAME-VALUE-CONCEPT.md  GRD-escape-the-dungeon.md  KAPLAY-INTERFACE-SPEC.md  PANEL-ARCHITECTURE.md  PLANNING-COCKPIT-REQUIREMENTS.md  PRD-content-balancing.md  PRD-formulas-and-spaces.md  PRD-text-adventure-embeddings-demo.md  PRD-tooling-gameplay-analysis.md  PRD-ui-engineering-aesthetic.md  PROJECT.md  README.md  REFERENCES.md  REFERENCES.xml  REPOPLANNER-SUBMODULE.md  REQUIREMENTS-SUGGESTIONS-PHASE-52.md  REQUIREMENTS.md  REQUIREMENTS.xml  ROADMAP.md  ROADMAP.xml  STATE.md  STATE.xml  TASK-REGISTRY.md  TASK-REGISTRY.xml  TODO-dungeonbreak-3d.md  TODO-realtime-content-visualizer.md  UI-COMPONENT-REGISTRY.md  UNREAL-UI-CONTRACT-PACK.v1.json  config.json  escape-the-dungeon-teen-guide.md  implementation-roadmap.md  loop.json  migration-report.json  planning-config.toml
docs-site/: .env.example  .gitignore  README.md  components.json  mdx-components.tsx  middleware.ts  next.config.mjs  package.json  payload-types.ts  payload.config.ts  playwright.config.ts  pnpm-lock.yaml  source.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+811 files in other folders)
