[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dungeonbreak_narrative = ["data/*.json"]

[project]
name = "dungeonbreak-lab"
version = "0.1.0"
description = "Jupyter Lab and notebooks for DungeonBreak narrative state-space analysis"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
docs = ["pdoc>=14"]
embeddings = ["sentence-transformers>=3.0"]

